<resources>
    <string name="app_name">CookingSupporter</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">PROFILE</string>
    <string name="setting">CATEGORY</string>
    <string name="logout">LOGOUT</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="search">Search</string>
    <string name="addFood">Add Food</string>

    <string name="mainFragment">Food List</string>
    <string name="loading">Loading...</string>
    <string name="congratulations_n_your_account_was_created">Congratulations !   Your account was created.</string>
    <string name="let_s_start">LET\'S START</string>
    <string name="register_success_image">register success image</string>
    <string name="food_type">Food type:</string>
    <string name="sample_food">Sample Food</string>
    <string name="list_food_image_description">list_food image description</string>
    <string name="ingredient">Ingredient</string>
    <string name="name">name</string>
    <string name="sss_gmail_com">sss@gmail.com</string>
    <string name="user_profile_image">user profile image</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_display_name">Create Your Display name</string>
    <string name="create_your_password_6_12">Create Your Password(6-12)</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="your_email_for_login">Your Email for Login</string>
    <string name="change_your_profile">Change Your Profile</string>
    <string name="update">Update</string>
    <string name="upload_image">Upload Image</string>
    <string name="food_name_text">ชื่อสูตรอาหาร (ผัดกระเพรา, ข้าว, แกง)</string>
    <string name="cooking_method_text">ขั้นตอนการทำ...</string>
    <string name="ingredient_text">วัตถุดิบ (หมู, ไก่, คะน้า, ...)</string>
    <string name="type">type</string>
    <string name="category_food_image_description">category food image description</string>
    <string name="add_food_recipe">Add Food Recipe</string>
    <string name="cooking_method">Cooking Method</string>
    <string name="your_food_name">Your Food Name</string>
    <string name="your_food_type">Your Food Type</string>
    <string name="cooking_supporter_text">CookingSupporter</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">LOGIN</string>
    <string name="cooking_supporter_logo">cooking supporter logo</string>
    <string name="rate_this_menu">Rate this menu</string>
    <string name="credit">CREDIT</string>

    <string-array name="foodType">
        <item>อาหารจานเดียว</item>
        <item>ซีฟู๊ด</item>
        <item>นึ่ง</item>
        <item>ปิ้ง ย่าง</item>
        <item>ต้ม</item>
        <item>ผัด</item>
        <item>ทอด</item>
        <item>อื่นๆ</item>
    </string-array>

    <string-array name="foodType_Firebase">
        <item>Main Dish</item>
        <item>Seafood</item>
        <item>Steaming</item>
        <item>Grilling</item>
        <item>Boiling</item>
        <item>Frying_food</item>
        <item>Deep_Frying_food</item>
        <item>Other</item>
    </string-array>
</resources>
