<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chayen.cookingsupporter.NavigationAndSearch.Profile"
    android:background="@color/themecolorhunt_2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/change_your_profile"
            android:textSize="20sp"
            android:id="@+id/create_new_account"
            android:textStyle="bold"
            android:textColor="@color/themecolorhunt_1"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/userinfo"
            android:background="@drawable/button_money_border">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/text_updateDisplatName"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:textColorHighlight="#777"
                android:textColorHint="#777"
                android:textColor="#777"
                android:hint="@string/display_name" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_info"
        android:layout_marginTop="30dp"
        android:id="@+id/button_upload_profile_image_layout">

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textSize="20sp"
            android:background="@color/buttoncolor_yellow"
            android:textColor="@color/colorBrightRed" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_upload_profile_image_layout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:id="@+id/profile_image"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/user_profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/update"
            android:background="#fb4f9f"
            android:textColor="#ffffff"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</RelativeLayout>
