<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.example.chayen.cookingsupporter.LoginRegister">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cooking_supporter_logo"
                android:src="@drawable/cooking_supporter_logo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/user_id"
            android:background="@drawable/button_money_border">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#777"
                android:textColorHighlight="#777"
                android:textColorHint="#777"
                tools:ignore="RtlHardcoded"
                android:maxLines="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:id="@+id/imageView"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_email"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:id="@+id/password"
            android:background="@drawable/button_money_border">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#777"
                android:textColorHighlight="#777"
                android:textColorHint="#777"
                android:maxLines="1"
                tools:ignore="RtlHardcoded" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:id="@+id/imageView2"
                android:layout_marginBottom="0dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_pin"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:nestedScrollingEnabled="false"
            android:onClick="buttonOnClick"
            android:background="#333"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="#ffffff"
            android:layout_marginTop="80dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button_google"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="130dp" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_new_account"
        android:textSize="20sp"
        android:id="@+id/create_new_account"
        android:textStyle="bold"
        android:textColor="#777"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:id="@+id/forgot_password"
        android:textStyle="bold"
        android:textColor="#777"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="40dp"/>
</FrameLayout>
