<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_cooking_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chayen.cookingsupporter.FoodListAdapter.CookingRecipe"
    android:background="@color/themecolorhunt_2">

    <LinearLayout
        android:id="@+id/layoutcookingRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/cooking_recipe_foodimage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="top|center"
            android:src="@drawable/test_list_food"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/cooking_recipe_foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/sample_food"
            android:textColor="#000000"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/layoutcookingFoodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/food_type"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/cooking_recipe_foodtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/type"
                android:textColor="#000000"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40sp">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/rate_this_menu"
                android:layout_marginRight="10sp"
                android:textColor="#000000"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/mainpage_star_button_1"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/star_button"/>

            <Button
                android:id="@+id/mainpage_star_button_2"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/star_button"/>

            <Button
                android:id="@+id/mainpage_star_button_3"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/star_button"/>

            <Button
                android:id="@+id/mainpage_star_button_4"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/star_button"/>

            <Button
                android:id="@+id/mainpage_star_button_5"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:background="@drawable/star_button"/>
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout_foodpage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="5dp">
        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:id="@+id/mainfoodrecipe"
            android:background="@color/themecolorhunt_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager_foodpage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v4.view.ViewPager>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
