<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchfood_adapter_card"
        android:layout_marginBottom="20dp"
        app:cardElevation="3dp"
        app:contentPadding="3dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/searchfood_list_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/test_list_food"
                tools:ignore="RtlHardcoded"
                android:contentDescription="@string/list_food_image_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/searchfood_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/sample_food"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    autofit:minTextSize="10sp"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/searchfood_list_text_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/food_type"
                        android:layout_marginBottom="5dp"
                        android:textColor="#888"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/searchfood_list_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:text=""
                        android:layout_marginBottom="5dp"
                        android:textColor="#888"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/searchfood_list_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/list_food_image_description"
                        android:src="@drawable/rsz_star_2_5"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>